feat: Writer 전략 리팩토링 및 성능 시각화 개선
- BulkJdbcWriter에 bulk insert를 구현하여 성능을 개선하였습니다.
- Writer 전략에 대한 성능 테스트를 추가하여 실행 시간과 잠재적 데드락을 측정할 수 있도록 하였습니다.
- PerformanceVisualizer를 개선하여 더 유연하고 상세한 차트 생성을 지원합니다.
- DailyLogWriterTest의 테스트 커버리지를 확장하여 추가적인 시나리오와 경계 조건을 포함하였습니다.
- JpaWriter와 JdbcWriter를 리팩토링하여 성능과 유지보수성을 향상시켰습니다.